--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,16 @@ body {
   text-align: center;
   font-family: 'Merriweather', serif;
 }
+.carousel-control-prev{
+  position: absolute;
+  top:300px;
+  left: 50px;
+}
+.carousel-control-next{
+  position: absolute;
+  top:300px;
+  right: 50px;
+}
 
 h1 {
   color: #66BFBF;
